syntax = "proto3";

package models.organizations;

message Organization {
  bytes id = 1; // UUID
  bytes owner = 2; // user_id, UUID
  string name = 3;
  optional string display_name = 4;
  optional string email = 5;
}

message Team {
  bytes id = 1; // UUID
  bytes organization_id = 2; // UUID
  string name = 3;
  optional string display_name = 4;
}

message OrganizationMember {
  bytes organization_id = 1; // UUID
  bytes user_id = 2; // UUID
  repeated bytes team_ids = 3; // UUIDs
}